--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%=form_for(:session, url: login_path) do |f|%>
+<%=form_for(:user, url: '/users/create') do |f|%>
     <div class="field">
         <%= f.label :email %><br>
         <%= f.email_field :email, placeholder: "email address"  %><br>
